<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.skindemo"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/dial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/skin_demo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <View
        style="?spinnerbgstyle"
        android:layout_width="fill_parent"
        android:layout_height="2dp" />

    <com.example.skindemo.CustomLinearLayout
        android:id="@+id/ll"
        style="?roundedbgstyle"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/dial"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dp"
        custom:roundedCorner="true" >

        <!--  -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/image"
                style="?imageStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/image"
                android:padding="5dp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/galaxy_s4" />

            <RatingBar
                android:id="@+id/rating"
                style="?ratingstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_name"
                android:layout_below="@+id/device_name"
                android:rating="4.5" />

            <Button
                android:id="@+id/buy"
                style="?backgroundStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/device_name"
                android:layout_below="@+id/rating"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/buy_now"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/check"
                style="?checkBoxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_name"
                android:layout_below="@+id/buy"
                android:text="add_to_compare"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/notify_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_name"
                android:layout_below="@+id/check"
                android:layout_marginTop="10dp"
                android:text="@string/send_details_to"
                android:textSize="8sp" />

            <EditText
                android:id="@+id/mail_id"
                style="?edittextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_name"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/notify_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/mail_to"
                android:singleLine="true" />
        </RelativeLayout>
    </com.example.skindemo.CustomLinearLayout>

    <Spinner
        android:id="@+id/price_filter"
        style="?spinnerbgstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/Theme_Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@android:color/black"
            android:text="@string/theme_blue"
            android:textColor="@color/light_blue" />

        <Button
            android:id="@+id/Theme_Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:background="@android:color/black"
            android:text="@string/theme_green"
            android:textColor="@color/light_green" />
    </LinearLayout>

</RelativeLayout>